--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <div class="buffer col-12"></div>
             <section class="text-center col-12">
                <hr />
-               <button class="btn btn-primary btn-xl">Find out more</button>
+               <a href="https://mailchi.mp/ebf1904ceadf/startup">
+                  <button class="btn btn-primary btn-xl">Find out more</button>
+               </a>
             </section>
          </div>
       </div>
