--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
          crossorigin="anonymous"
       />
 
+      <!-- animate.style from a CDN -->
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+      />
+
       <!-- Your own stylesheet -->
       <link rel="stylesheet" type="text/css" href="style.css" />
    </head>
@@ -34,9 +40,13 @@
             </header>
             <div class="buffer col-12"></div>
             <section class="text-center col-12">
-               <hr />
+               <hr class="animate__animated animate__rubberBand" />
                <a href="https://mailchi.mp/ebf1904ceadf/startup">
-                  <button class="btn btn-primary btn-xl">Find out more</button>
+                  <button
+                     class="btn btn-primary btn-xl animate__animated animate__rubberBand"
+                  >
+                     Find out more
+                  </button>
                </a>
             </section>
          </div>
